<resources>
    <string name="app_name">BaseAndroidProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="speedy_vpn">Speedy <b> <font color="#2821FC">VPN</font></b></string>
    <string name="ads_are_being_shown">Ads are being shown</string>
    <string name="unisoft_global">Unisoft Global</string>
    <string name="solving_real_world_business_challenges_for_your_enterprise">Solving real world business challenges for your enterprise</string>
    <string name="sign_up"><![CDATA[Sign Up >]]></string>
    <string name="connecting_time">Connecting time</string>
    <string name="upload">Upload</string>
    <string name="free_3_days_unlimit">FREE 3 DAYS UNLIMIT</string>
    <string name="change_server">Change Server</string>
    <string name="search_location">Search location</string>
    <string name="connection_request">Connection request</string>
    <string name="satellite_vpn_wanna_setup_a_vpn_connection_that_allows_it_to_monitor_network_traffic_only_accept_if_you_trust_the_source">Satellite Vpn wanna setup a VPN connection that allows it to monitor network traffic. Only accept if you trust the source.</string>
    <string name="key_appears_at_the_top_of_your_screen_when_vpn_is_active">“ key “ appears at the top of your screen when VPN is active</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="ok_got_it">OK, Got it</string>
    <string name="watch_an_ads_video_to_get_more_5_mins_free_trial">Watch an ads video to get more 5 mins free trial</string>
    <string name="watch_an_ads_video_to_get_more_30_mins_free_trial">Watch an ads video to get more 30 mins free trial</string>
    <string name="extend_time_connection">Extend time connection</string>
    <string name="notice">Notice</string>
    <string name="general">General</string>
    <string name="feedback">Feedback</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_this_app">Share this app</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="get_premium_today">Get premium today</string>
    <string name="remove_ads_and_unlock_all_location">Remove ads and unlock all location</string>
    <string name="then_122000_week">then 122000đ/week</string>
    <string name="_3_days_free_trial"><![CDATA[3 days Free Trial    >]]></string>
    <string name="anonymous">Anonymous</string>
    <string name="hide_your_ip_anonymous_surfing">Hide your ip , anonymous surfing</string>
    <string name="remove_ads">remove ads</string>
    <string name="have_fun_surfing_without_annoying_ads">Have fun surfing without annoying ads</string>
    <string name="fast">Fast</string>
    <string name="up_to_1000_mb_s_bandwith_to_explore">Up to 1000 Mb/s bandwith to explore</string>
    <string name="secure">Secure</string>
    <string name="transfer_traffic_via_encrypted_tunnel">Transfer traffic via encrypted tunnel</string>
    <string name="_1_month">1 month</string>
    <string name="succeed">Succeed!</string>
    <string name="disconnected">Disconnected!</string>
    <string name="extend_the_time">Extend the time</string>
    <string name="watch_an_ads">Watch an ads</string>
    <string name="_5_min">+5 min</string>
    <string name="extend_extra">Extend Extra</string>
    <string name="_30_min">+30 min</string>
    <string name="not_ideal_speed">Not ideal speed</string>
    <string name="click_to_replace">Click to replace</string>
    <string name="download">Download</string>
</resources>