<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:src="@drawable/ic_request" />

            <TextView
                style="@style/font_500_20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/connection_request"
                android:textColor="@color/_121830" />

            <TextView
                style="@style/font_400_14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:gravity="center"
                android:text="@string/satellite_vpn_wanna_setup_a_vpn_connection_that_allows_it_to_monitor_network_traffic_only_accept_if_you_trust_the_source"
                android:textColor="@color/_121830" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_4sdp"
                    android:layout_height="@dimen/_4sdp"
                    android:layout_margin="@dimen/_8sdp"
                    android:src="@drawable/bg_blue_radius_32"
                    app:tint="@color/ff8630" />

                <TextView
                    style="@style/font_400_14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/key_appears_at_the_top_of_your_screen_when_vpn_is_active"
                    android:textColor="@color/ff8630" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/btnCancel"
                    style="@style/font_500_16sp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_gray_20"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/_849199" />

                <TextView
                    android:id="@+id/btnOK"
                    style="@style/font_500_16sp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_blue_radius_32"
                    android:gravity="center"
                    android:text="@string/ok"
                    android:textColor="@color/white" />

            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>