<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="is5min"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_200sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:src="@drawable/img_clock" />

            <TextView
                style="@style/font_500_20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/extend_time_connection"
                android:textColor="@color/_121830" />

            <TextView

                style="@style/font_400_14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:gravity="center"
                android:text="@{is5min?@string/watch_an_ads_video_to_get_more_5_mins_free_trial:@string/watch_an_ads_video_to_get_more_30_mins_free_trial}"
                android:textColor="@color/_121830"
                tools:text="@string/watch_an_ads_video_to_get_more_5_mins_free_trial" />

            <TextView
                android:id="@+id/btnOK"
                style="@style/font_500_16sp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/bg_blue_radius_32"
                android:gravity="center"
                android:text="@string/ok_got_it"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>