<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_iap"
        tools:context=".app.ui.fragment.iap.IapFragment">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/font_400_24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32sdp"
            android:text="@string/speedy_vpn"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_22sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvTitle"
            app:tint="@color/_03d055" />

        <ImageView
            android:id="@+id/ivTower"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_21sdp"
            android:src="@drawable/ic_radio_tower"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvTitle" />

        <ImageView
            android:id="@+id/ivIap"
            android:layout_width="@dimen/_64sdp"
            android:layout_height="@dimen/_64sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:src="@drawable/img_iap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <TextView
            android:id="@+id/tvGetPremium"
            style="@style/font_700_24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:text="@string/get_premium_today"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivIap" />

        <TextView
            android:id="@+id/tvMess"
            style="@style/font_400_16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_56sdp"
            android:gravity="center"
            android:text="@string/remove_ads_and_unlock_all_location"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvGetPremium" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutContent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_180sdp"
            android:layout_marginHorizontal="@dimen/_24sdp"
            app:layout_constraintTop_toBottomOf="@id/tvMess">

            <View
                android:id="@+id/LineLeft"
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginStart="@dimen/_6sdp"
                android:background="@color/white_15"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.42" />

            <View
                android:id="@+id/LineRight"
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:background="@color/white_15"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.42" />

            <View
                android:id="@+id/lineTop"
                android:layout_width="@dimen/_1sdp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_6sdp"
                android:background="@color/white_15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.35"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/lineBottom"
                android:layout_width="@dimen/_1sdp"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/_6sdp"
                android:background="@color/white_15"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.35"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="@id/lineTop"
                app:layout_constraintHeight_percent="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ivAnonymous"
                    android:layout_width="@dimen/_19sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_iap_anonymous"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/font_700_16sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:text="@string/anonymous"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ivAnonymous"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/font_400_14sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hide_your_ip_anonymous_surfing"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivAnonymous" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.5"
                app:layout_constraintStart_toEndOf="@id/lineTop"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ivFast"
                    android:layout_width="@dimen/_19sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_iap_fast"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/font_700_16sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:text="@string/fast"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ivFast"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/font_400_14sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/up_to_1000_mb_s_bandwith_to_explore"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivFast" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_18sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/lineBottom"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/LineLeft">

                <ImageView
                    android:id="@+id/ivRemoveAds"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_iap_remove_ads"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/font_700_16sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:text="@string/remove_ads"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ivRemoveAds"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/font_400_14sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/have_fun_surfing_without_annoying_ads"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivRemoveAds" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_18sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/lineBottom"
                app:layout_constraintTop_toTopOf="@id/LineLeft">

                <ImageView
                    android:id="@+id/ivSecure"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_iap_secure"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/font_700_16sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:text="@string/secure"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ivSecure"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/font_400_14sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transfer_traffic_via_encrypted_tunnel"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivSecure" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvPrivePerWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_24sdp"
            android:text="@string/then_122000_week"
            android:textColor="@color/white_70"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/btnBuy"
            style="@style/font_700_16sp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_44sdp"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:background="@drawable/bg_blue_radius_32"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="@dimen/_4sdp"
            android:text="@string/_3_days_free_trial"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/tvPrivePerWeek" />

        <com.airbnb.epoxy.EpoxyRecyclerView
            android:id="@+id/ervIap"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:layout_marginVertical="@dimen/_14sdp"
            app:layout_constraintBottom_toTopOf="@id/btnBuy"
            app:layout_constraintTop_toBottomOf="@id/layoutContent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>