<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".app.ui.fragment.splash.SplashFragment">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/img_map"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="457:325"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/font_400_24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/speedy_vpn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLoaddingAds"
            style="@style/font_400_14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_26sdp"
            android:gravity="center"
            android:text="@string/ads_are_being_shown"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageView
            android:id="@+id/ivLoading"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:src="@drawable/img_splash_loading"
            app:layout_constraintBottom_toTopOf="@id/tvLoaddingAds"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutApp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:visibility="gone">

            <ImageView
                android:id="@+id/ivClose"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_32sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:src="@drawable/ic_close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivUniSoft"
                android:layout_width="@dimen/_84sdp"
                android:layout_height="@dimen/_84sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:src="@drawable/ic_unisoft"
                app:layout_constraintBottom_toTopOf="@id/tvUniSoft"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvUniSoft"
                style="@style/font_700_24sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:text="@string/unisoft_global"
                android:textColor="@color/_505050"
                app:layout_constraintBottom_toTopOf="@id/tvContent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvContent"
                style="@style/font_500_16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_60sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:gravity="center"
                android:text="@string/solving_real_world_business_challenges_for_your_enterprise"
                android:textColor="@color/_505050"
                app:layout_constraintBottom_toTopOf="@id/lineView" />

            <View
                android:id="@+id/lineView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginHorizontal="@dimen/_32sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@color/_9a6464"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.6" />

            <TextView
                android:id="@+id/btnSignUp"
                style="@style/font_700_16sp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_44sdp"
                android:layout_marginHorizontal="@dimen/_24sdp"
                android:layout_marginBottom="@dimen/_40sdp"
                android:background="@drawable/bg_blue_radius_32"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="@dimen/_4sdp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>